--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,64 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+    width: 960px;
+    margin: 0 auto;
+}
+#search-bar {
+    margin-top: 20%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    border: 2px solid var(--supportive-light-brown-e-1-d-6-ce, #E1D6CE);
+    background: var(--neutral-white-ffffff, #FFF);
+    padding: 16px 12px;
+}
+#search-bar input {
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+    border: none;
+    color: var(--primary-brown-572-f-11, #572F11);
+    margin-left: 10px;
+}
+#search-bar input:focus {
+    outline: none;
+}
+::placeholder {
+    font-size: 18px;
+    font-weight: 500;
+    border: none;
+    color: var(--primary-brown-572-f-11, #572F11);
+}
+
+.search-area {
+    display: flex;
+    align-items: center;
+    width: 85%;
+}
+.btn {
+    border-radius: 4px;
+    background: var(--primary-orange-f-29049, #F29049);
+    box-shadow: 0px 4px 8px 0px rgba(248, 148, 76, 0.35);
+    padding: 16px 20px;
+    color: var(--neutral-pure-white-ffffff, #FFF);
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    min-width: 92px;
+}
+.result ul {
+    list-style: none;
+    margin-top: 50px;
+}
+
+.result li {
+    border-bottom: 1px solid var(--supportive-light-brown-e-1-d-6-ce, #E1D6CE);
+}
+.result li b {
+    margin-right: 5px;
+}
