--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+.header {
+    padding: 20px;
+}
+.header img {
+    width: 100px;
+    height: auto;
+}
+
 .mt-1 {
     margin-top: 1rem;
 }
@@ -30,8 +38,14 @@ code {
     width: 960px;
     margin: 0 auto;
 }
-#search-bar {
+.container .logo {
     margin-top: 20%;
+}
+.container .logo img {
+    display: block;
+    margin: 0 auto;
+}
+#search-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -108,4 +122,17 @@ code {
     font-weight: 700;
     margin-left: 20px;
     color: var(--primary-brown-572-f-11, #572F11);
+}
+
+footer {
+    position: relative;
+    width: 100%;
+}
+
+p.copyright {
+    position: absolute;
+    width: 100%;
+    line-height: 40px;
+    text-align: center;
+    bottom: -50px;
 }
